<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ecran.Accueil"
    android:background="@color/jaune"
    >


    <Button
        android:id="@+id/btn_scan_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn_scan_bluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        />


    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn_telecommande"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_scan_bluetooth"
        android:layout_marginTop="50dp"

        />


    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn_3"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_2"
        android:layout_marginTop="50dp"

        />


    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_btn_4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_3"
        android:layout_marginTop="50dp"

        />

</RelativeLayout>